log-output/manifests-gke/log-output-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - name: http
      protocol: TCP
      port: 1234
      targetPort: 3000
