log-output/manifests-gke/ping-pong-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3001
